# limbus

./: .gitignore  .hgignore  CMakeLists.txt  Doxyfile  README.md  README.txt  TODO.txt  build.sh  make_clean.bat  make_clean.sh
bindings/: CMakeLists.txt  audio_stream.cdef  display.cdef  filesystem.cdef  input_device.cdef  input_dispatcher.cdef  joystick.cdef  keyboard.cdef  lua_binding.lua  mouse.cdef  opengl_context.cdef  opengl_window.cdef  python_binding.lua  ruby_binding.lua  screen.cdef  tablet.cdef  timer.cdef  window.cdef
dependencies/: CMakeLists.txt  install.bat  install.sh  install_bash.sh
dependencies/cbind/: LICENSE.txt  c_parser.lua  cdef_determine_types.lua  cdef_error_checking.lua  cdef_parser.lua  common.lua  dll_helper.lua  file_io.lua  generate_dll_def.lua  generator.lua
dependencies/cbind/bind_gen/: csharp.lua  go.lua  go_syscall.lua  lua.lua  python.lua  ruby.lua
dependencies/cbind/class_gen/: cpp.lua  csharp.lua  lua.lua  python.lua  ruby.lua
dependencies/cbind/lparse/: context.lua  expressions.lua  match.lua  parser.lua  run_tests.lua  scope.lua  tokenizer.lua
examples/: CMakeLists.txt  csharp_example.cs  lua_example.lua  opengl_example.c  opengl_window.c  python_example.py  ruby_example.rb  screen_example.c  tablet_example.c  timing_example.c
examples/c/: audio_stream_example.c  build.sh  opengl_example.c  opengl_window.c  screen_example.c  tablet_example.c  timing_example.c
examples/cpp/: opengl_window.cpp
examples/csharp/: audio_stream_example.cs  csharp_example.cs  premake4.lua
examples/lua/: lua_example.lua
examples/python/: python_example.py
examples/ruby/: ruby_example.rb
include/limbus/: audio_stream.h  custom_context.h  display.h  filesystem.h  joystick.h  keyboard.h  mouse.h  opengl.h  opengl_context.h  screen.h  socket.h  static_buffer.h  tablet.h  timing.h  window.h
source/: config.lua  unittest.c
source/generic/: static_buffer.c
source/platform/alsa/audio_stream/: audio_stream_alsa.c
source/platform/freebsd/filesystem/: freebsd_filesystem.c
source/platform/linux/filesystem/: linux_filesystem.c
source/platform/linux/joystick/: joystick_linux.c
source/platform/sdl/: sdl_input_device.h  sdl_opengl_context.h  sdl_screen.h  sdl_window.h
source/platform/sdl/keyboard/: sdl_keyboard.c
source/platform/sdl/mouse/: sdl_mouse.c
source/platform/sdl/opengl_context/: opengl_context_sdl.c
source/platform/sdl/screen/: screen_sdl.c
source/platform/sdl/window/: window_sdl.c
source/platform/unix/filesystem/: unix_filesystem.c  unix_filesystem.h
source/platform/unix/socket/: unix_socket.c
source/platform/unix/timing/: timing_unix.c
source/platform/winapi/: wgl_opengl_context.h  win_screen.h  win_window.h  winapi_entrypoint.c  winapi_input_device.h
source/platform/winapi/audio_stream/: winapi_audio_stream.c
source/platform/winapi/custom_context/: custom_context_winapi.c
source/platform/winapi/filesystem/: filesystem_winapi.c
source/platform/winapi/joystick/: joystick_winmm.c
source/platform/winapi/keyboard/: winapi_keyboard.c
source/platform/winapi/mouse/: win_mouse.c
source/platform/winapi/opengl_context/: opengl_context_wgl.c
source/platform/winapi/screen/: screen.c
source/platform/winapi/tablet/: tablet_windows.c  wintab.h
source/platform/winapi/timing/: timing_windows.c
source/platform/winapi/window/: win_window.c
source/platform/x11/: glx_opengl_context.h  x11_input_device.h  x11_screen.h  x11_window.h
source/platform/x11/keyboard/: x11_keyboard.c
source/platform/x11/mouse/: x11_mouse.c
source/platform/x11/opengl_context/: opengl_context_glx.c
source/platform/x11/screen/: screen_x11.c
source/platform/x11/tablet/: x11_tablet.c
source/platform/x11/window/: dnd.h  window_x11.c
source/util/: hashmap.c  hashmap.h  stdint.h  unicode.c  unicode.h  unittest.h  vector.c  vector.h
tests/: CMakeLists.txt  common.h  filesystem.c  input_device_test.c  misc_tests.c  opengl_window_test.c  window_properties.c
